# admin-server/docs/swagger.json
@@ -571,7 +571,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/web.ImportServiceImport"
+                            "$ref": "#/definitions/types.ImportServiceImport"
                         }
                     },
                     "400": {
@@ -603,7 +603,46 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/web.ImportServiceImporter"
+                            "$ref": "#/definitions/types.ImportServiceImporter"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/types.Res"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Get a single importer and its template",
+                "tags": [
+                    "File Import"
+                ],
+                "summary": "Get importer",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Importer ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Request body",
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.ImportServiceImporter"
                         }
                     },
                     "400": {
@@ -680,7 +719,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/web.ImporterServiceUploadHeaderRowSelection"
+                            "$ref": "#/definitions/types.ImporterServiceUploadHeaderRowSelection"
                         }
                     }
                 ],
@@ -688,7 +727,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/web.ImportServiceUpload"
+                            "$ref": "#/definitions/types.ImportServiceUpload"
                         }
                     },
                     "400": {
@@ -720,7 +759,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/web.ImportServiceUpload"
+                            "$ref": "#/definitions/types.ImportServiceUpload"
                         }
                     },
                     "400": {
@@ -1135,6 +1174,11 @@
                     "type": "integer",
                     "example": 256
                 },
+                "template": {
+                    "description": "Set if the user passes in a template to the SDK, which overrides the template on the importer",
+                    "type": "string",
+                    "example": "{}"
+                },
                 "tus_id": {
                     "type": "string",
                     "example": "ee715c254ee61855b465ed61be930487"
@@ -1258,33 +1302,7 @@
                 }
             }
         },
-        "types.Res": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "types.UploadRow": {
-            "type": "object",
-            "properties": {
-                "index": {
-                    "type": "integer",
-                    "example": 0
-                },
-                "values": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
-        "web.ImportServiceImport": {
+        "types.ImportServiceImport": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -1330,7 +1348,7 @@
                 }
             }
         },
-        "web.ImportServiceImporter": {
+        "types.ImportServiceImporter": {
             "type": "object",
             "properties": {
                 "id": {
@@ -1346,13 +1364,19 @@
                     "example": false
                 },
                 "template": {
-                    "$ref": "#/definitions/web.ImportServiceTemplate"
+                    "$ref": "#/definitions/types.ImportServiceTemplate"
                 }
             }
         },
-        "web.ImportServiceTemplate": {
+        "types.ImportServiceTemplate": {
             "type": "object",
             "properties": {
+                "columns": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.ImportServiceTemplateColumn"
+                    }
+                },
                 "id": {
                     "type": "string",
                     "example": "f0797968-becc-422a-b135-19de1d8c5d46"
@@ -1360,16 +1384,10 @@
                 "name": {
                     "type": "string",
                     "example": "My Template"
-                },
-                "template_columns": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/web.ImportServiceTemplateColumn"
-                    }
                 }
             }
         },
-        "web.ImportServiceTemplateColumn": {
+        "types.ImportServiceTemplateColumn": {
             "type": "object",
             "properties": {
                 "description": {
@@ -1379,6 +1397,10 @@
                 "id": {
                     "type": "string",
                     "example": "a1ed136d-33ce-4b7e-a7a4-8a5ccfe54cd5"
+                },
+                "key": {
+                    "type": "string",
+                    "example": "email"
                 },
                 "name": {
                     "type": "string",
@@ -1390,7 +1412,7 @@
                 }
             }
         },
-        "web.ImportServiceUpload": {
+        "types.ImportServiceUpload": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -1433,6 +1455,14 @@
                     "type": "string",
                     "example": "{\"user_id\": 1234}"
                 },
+                "template": {
+                    "description": "Set if the user passes in a template to the SDK, which overrides the template on the importer",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/types.ImportServiceTemplate"
+                        }
+                    ]
+                },
                 "tus_id": {
                     "type": "string",
                     "example": "ee715c254ee61855b465ed61be930487"
@@ -1440,7 +1470,7 @@
                 "upload_columns": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/web.ImportServiceUploadColumn"
+                        "$ref": "#/definitions/types.ImportServiceUploadColumn"
                     }
                 },
                 "upload_rows": {
@@ -1451,7 +1481,7 @@
                 }
             }
         },
-        "web.ImportServiceUploadColumn": {
+        "types.ImportServiceUploadColumn": {
             "type": "object",
             "properties": {
                 "id": {
@@ -1474,6 +1504,41 @@
                     "example": [
                         "test@example.com"
                     ]
+                }
+            }
+        },
+        "types.ImporterServiceUploadHeaderRowSelection": {
+            "type": "object",
+            "properties": {
+                "index": {
+                    "type": "integer",
+                    "example": 0
+                }
+            }
+        },
+        "types.Res": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.UploadRow": {
+            "type": "object",
+            "properties": {
+                "index": {
+                    "type": "integer",
+                    "example": 0
+                },
+                "values": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -1506,18 +1571,13 @@
                     "type": "string",
                     "example": "Test Importer"
                 },
+                "skip_header_row_selection": {
+                    "type": "boolean",
+                    "example": false
+                },
                 "webhooks_enabled": {
                     "type": "boolean",
                     "example": true
-                }
-            }
-        },
-        "web.ImporterServiceUploadHeaderRowSelection": {
-            "type": "object",
-            "properties": {
-                "index": {
-                    "type": "integer",
-                    "example": 0
                 }
             }
         },
